third_party/move/move-compiler-v2/tests/more-v1/parser/entry_const.exp

Diagnostics:
error: invalid modifier
  ┌─ tests/more-v1/parser/entry_const.move:3:5
  │
3 │     entry const S: u64 = 0;
  │     ^^^^^ Invalid constant declaration. 'entry' is used only on functions
