third_party/move/move-compiler-v2/tests/more-v1/parser/entry_const.move
module 0x2::M {
    // invalid modifier
    entry const S: u64 = 0;
}
